# de-fipe

./: .gitignore  Makefile  README.md  azure-pipelines.yml  mkdocs.yml  pyproject.toml
.dbx/: project.json
conf/: deployment.yml
conf/pipeline/: bronze.yml  general_config.yml  silver.yml
docs/: RFC.md  index2.md
fipe/conf/: bronze.yml  config_pipeline.yml  get_configs.py  read_configuration.py  scraper_config.yml  silver.yml
fipe/elt/: extract.py  load.py  transform.py
fipe/elt/extract/: utils.py
fipe/elt/load/: tempCodeRunnerFile.py  utils.py
fipe/elt/transform/: utils.py
fipe/pipeline/: bronze_to_silver.py  extract_load_models.py  extract_load_months_brands.py  extract_load_reference_month.py  extract_load_tables.py  extract_on_demand.py  install_chrome.py  install_webbrowser.ipynb  on_demand.py  pipeline1.py  read_configuration.py
fipe/scripts/: config.py  delta_quality..py  get_config.py  get_configs.py  get_spark.py  loggers.py  provide_configuration.py  quality_delta.py  tempCodeRunnerFile.py  utils.py
tests/: conftest.py  test_config.py  test_extract.py  test_load.py  test_transform.py
tests/test_data/: brands.html  table_fipe.html
